@@ -1,5 +1,6 @@
 package com.gepardec.impl.service;
 
+import static com.gepardec.TestFixtures.match;
 import static com.gepardec.TestFixtures.matches;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -13,7 +14,6 @@ import com.gepardec.core.repository.GameRepository;
 import com.gepardec.core.repository.MatchRepository;
 import com.gepardec.core.repository.UserRepository;
 import com.gepardec.model.Match;
-import com.gepardec.model.dto.MatchDto;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -40,27 +40,25 @@ class MatchServiceImplTest {
 
   @Test
   void ensureSavingValidMatchReturnsOptionalMatch() {
-    MatchDto matchDto = TestFixtures.matchToMatchDto(
-        TestFixtures.match());
+    Match match = match();
 
     when(matchRepository.saveMatch(any())).thenReturn(
-        Optional.of(TestFixtures.match()));
+        Optional.of(match()));
     when(gameRepository.existsByGameId(anyLong())).thenReturn(true);
     when(userRepository.existsByUserId(anyList())).thenReturn(true);
 
-    assertEquals(matchService.saveMatch(matchDto).get().getId(),
-        TestFixtures.match().getId());
+    assertEquals(matchService.saveMatch(match).get().getId(),
+        match().getId());
   }
 
   @Test
   void ensureSavingInvalidMatchReferencingNotExistingGameReturnsEmptyOptional() {
     //Given
-    Match match = TestFixtures.match();
+    Match match = match();
     match.setUsers(TestFixtures.users(10));
 
     //When
-    var savedMatch = matchService.saveMatch(
-        TestFixtures.matchToMatchDto(match));
+    var savedMatch = matchService.saveMatch(match);
 
     //Then
     assertEquals(Optional.empty(), savedMatch);
@@ -69,11 +67,10 @@ class MatchServiceImplTest {
   @Test
   void ensureSavingInvalidMatchReferencingNoUsersReturnsEmptyOptional() {
     //Given
-    Match match = TestFixtures.match();
+    Match match = match();
 
     //When
-    var savedMatch = matchService.saveMatch(
-        TestFixtures.matchToMatchDto(match));
+    var savedMatch = matchService.saveMatch(match);
 
     //Then
     assertEquals(Optional.empty(), savedMatch);
@@ -98,7 +95,7 @@ class MatchServiceImplTest {
 
   @Test
   void ensureFindMatchByIdReturnsMatchForExistingMatch() {
-    Match match = TestFixtures.match();
+    Match match = match();
 
     when(matchRepository.findMatchById(any())).thenReturn(Optional.of(match));
 
@@ -107,7 +104,7 @@ class MatchServiceImplTest {
 
   @Test
   void ensureFindMatchByIdReturnsOptionalEmptyForNonExistingMatch() {
-    Match match = TestFixtures.match();
+    Match match = match();
 
     when(matchRepository.findMatchById(any())).thenReturn(Optional.empty());
 
@@ -116,7 +113,7 @@ class MatchServiceImplTest {
 
   @Test
   void ensureDeleteMatchReturnsDeletedMatchForExistingMatch() {
-    Match match = TestFixtures.match();
+    Match match = match();
 
     when(matchRepository.findMatchById(any())).thenReturn(Optional.of(match));
     var deletedMatch = matchService.deleteMatch(match.getId());
@@ -126,7 +123,7 @@ class MatchServiceImplTest {
 
   @Test
   void ensureDeleteMatchReturnsOptionalEmptyForNonExistingMatch() {
-    Match match = TestFixtures.match();
+    Match match = match();
 
     when(matchRepository.findMatchById(any())).thenReturn(Optional.empty());
 
@@ -138,8 +135,7 @@ class MatchServiceImplTest {
   @Test
   void ensureUpdateMatchReturnsUpdatedMatchForExistingMatch() {
     //Given
-    Match matchNew = TestFixtures.match(1L);
-    MatchDto matchNewDto = TestFixtures.matchToMatchDto(matchNew);
+    Match matchNew = match(1L);
 
     //When
 
@@ -148,7 +144,7 @@ class MatchServiceImplTest {
     when(userRepository.existsByUserId(anyList())).thenReturn(true);
     when(matchRepository.existsMatchById(anyLong())).thenReturn(true);
 
-    var updatedMatch = matchService.updateMatch(matchNewDto);
+    var updatedMatch = matchService.updateMatch(matchNew);
 
     //Then
     assertEquals(matchNew.getId(), updatedMatch.get().getId());
@@ -156,7 +152,8 @@ class MatchServiceImplTest {
 
   @Test
   void ensureFindMatchByUserIdReturnsListOfMatchesForExistingMatchWithUserId() {
-    Match match = TestFixtures.match();
+    Match match = match();
+    match.setUsers(TestFixtures.usersWithId(10));
 
     when(matchRepository.findMatchesByUserId(anyLong())).thenReturn(
         List.of(match));
@@ -169,8 +166,7 @@ class MatchServiceImplTest {
 
   @Test
   void ensureFindMatchByUserIdReturnsEmptyListForNonExistingMatch() {
-    Match match = TestFixtures.match();
-    when(matchRepository.findMatchesByUserId(anyLong())).thenReturn(List.of());
+    Match match = match();
 
     var foundMatches = matchService.findMatchesByUserId(
         match.getUsers().getFirst().getId());
@@ -181,7 +177,7 @@ class MatchServiceImplTest {
 
   @Test
   void ensureFindMatchByGameIdReturnsListOfMatchesForExistingMatch() {
-    Match match = TestFixtures.match();
+    Match match = match();
 
     when(matchRepository.findMatchesByGameId(anyLong())).thenReturn(List.of(match));
 
@@ -192,14 +188,14 @@ class MatchServiceImplTest {
 
   @Test
   void ensureFindMatchByGameIdReturnsEmptyListForNonExistingMatch() {
-    Match match = TestFixtures.match();
+    Match match = match();
 
     when(matchRepository.findMatchesByGameId(anyLong())).thenReturn(List.of());
 
-    var foundGameOutcomes = matchService.findMatchesByGameId(
+    var foundMatches = matchService.findMatchesByGameId(
         match.getGame().getId());
 
-    assertTrue(foundGameOutcomes.isEmpty());
+    assertTrue(foundMatches.isEmpty());
 
   }
 
@@ -209,13 +205,12 @@ class MatchServiceImplTest {
     when(matchRepository.findMatchesByUserIdAndGameId(anyLong(), anyLong())).thenReturn(matches);
 
     var foundMatches = matchService.findMatchesByUserIdAndGameId(Optional.of(1L), Optional.of(2L));
-    assertTrue(matches.contains(matches.get(0)));
+    assertTrue(matches.contains(matches.getFirst()));
     assertEquals(matches.size(), foundMatches.size());
   }
 
   @Test
   void ensureFindMatchByUserIdAndGameIdReturnsEmptyListForNonExistingMatch() {
-    List<Match> matches = TestFixtures.matches(5);
     when(matchRepository.findMatchesByUserIdAndGameId(anyLong(), anyLong())).thenReturn(List.of());
     var foundMatches = matchService.findMatchesByUserIdAndGameId(Optional.of(1L), Optional.of(2L));
 
@@ -224,7 +219,7 @@ class MatchServiceImplTest {
 
   @Test
   void ensureFindMatchByUserIdAndGameIdReturnsExistingMatchForUserIdNotBeingSpecified() {
-    Match match = TestFixtures.match();
+    Match match = match();
     List<Match> matches = new ArrayList<>();
     matches.add(match);
     when(matchRepository.findMatchesByGameId(anyLong())).thenReturn(matches);
@@ -240,19 +235,19 @@ class MatchServiceImplTest {
 
   @Test
   void ensureFindMatchByUserIdAndGameIdReturnsExistingMatchForGameIdNotBeingSpecified() {
-    Match match = TestFixtures.match();
+    Match match = match();
+    match.setUsers(TestFixtures.usersWithId(1));
     List<Match> matches = new ArrayList<>();
     matches.add(match);
 
     when(matchRepository.findMatchesByUserId(anyLong())).thenReturn(matches);
-
-    var foundmatches = matchService.findMatchesByUserIdAndGameId(
+    var foundMatches = matchService.findMatchesByUserIdAndGameId(
         Optional.of(match.getUsers().getFirst().getId()),
         Optional.empty());
 
-    assertTrue(foundmatches.contains(match));
-    assertEquals(foundmatches.size(), matches.size());
-    assertEquals(match, foundmatches.stream().findFirst().get());
+    assertTrue(foundMatches.contains(match));
+    assertEquals(foundMatches.size(), matches.size());
+    assertEquals(match, foundMatches.stream().findFirst().get());
   }
 
   @Test
